# TradingEngine

./: .gitignore  CMakeLists.txt  README.md
include/: MainWindow.hpp  OrderBook.hpp  OrderExecution.hpp  OrderManager.hpp  Trader.hpp
src/: MainWindow.cpp  OrderBook.cpp  OrderManager.cpp  Trader.cpp  main.cpp
tests/: test_orderbook.cpp  test_ordermanager.cpp  test_trader.cpp
